--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -22,8 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:backgroundTint="@color/green_primary"
+        android:backgroundTint="@color/green_secondary"
         android:textColor="@color/grey_primary"
+        android:textSize="15sp"
+        android:fontFamily="@font/poppins_semibold_italic"
         android:text="@string/searh_word"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
